--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -13,7 +13,7 @@
 
 <ul>
     <% rows.forEach(function(r) { %>
-        <li><%= r.uid %> - <%= r.name %></li>
+        <li><%= r.id %>,<%= r.Name %>,<%= r.Color %></li>
     <% }); %>
 </ul>
 
