--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -12,7 +12,7 @@
 <h2>Database Results</h2>
 
 <ul>
-    <% rows.forEach(function(r) { %>
+    <% Results.forEach(function(r) { %>
         <li><%= r.name %></li>
     <% }); %>
 </ul>
