--- a/public/css/rectangles.css
+++ b/public/css/rectangles.css
@@ -30,7 +30,7 @@ tr:hover{
     background-color: rgb(218, 218, 218);
 }
 
-.add-Btn,.delete-Btn{
+.add-Btn,#delete-Btn,#update,.return{
     background-color:rgb(160, 160, 160);
     padding: 10px 10px;
     border-radius: 12px;
